--- a/Add to Bag/style.css
+++ b/Add to Bag/style.css
@@ -13,16 +13,18 @@ html.body {
 main {
   width: 100vw;
   height: 100vh;
-  background: #333;
+  background: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 5px;
+  filter: drop-shadow(0px 0px 20px #00000091);
 }
 
 .img_info_div {
   border: 2px solid white;
   display: grid;
-  grid-template-columns: 5rem 20rem 22rem;
+  grid-template-columns: 5rem 20rem 25rem;
   grid-template-rows: auto;
   padding: 1rem;
 }
@@ -42,12 +44,12 @@ main {
       width: 100%;
       height: 100%;
       object-fit: fill;
-      border-radius: 3px;         
+      border-radius: 3px;
     }
   }
   div:hover img {
     transform: scale(1.2);
-    transition:transform 0.2s ease;
+    transition: transform 0.2s ease;
   }
 }
 
@@ -75,20 +77,113 @@ main {
 
 /* info div */
 .info_div {
+  /* background-color: red; */
   width: 100%;
   height: 100%;
-  background-color: red;
-  padding:0px 1rem;
+  padding: 0px 1rem;
 
-  & .product_details{
+  & .product_details {
+    /* background-color: green; */
     width: 100%;
-  background-color: green;
+    margin-bottom: 1rem;
 
+    & h4 {
+      color: #940d0d;
+      font-weight: 600;
+    }
+
+    & h5 {
+      color: #242424d8;
+      font-weight: 300;
+    }
   }
-  & .product_amount_details{
+  & .product_amount_details {
+    /* background-color: yellow; */
     width: 100%;
-    background-color: yellow;
+    margin-bottom: 3rem;
+    & h3 {
+      font-weight: 800;
+    }
+    & h6 {
+      color: #242424d8;
+    }
+  }
+}
 
+/* size details */
+.size_details {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+
+  & .horizontal_size_container {
+    /* background: red; */
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    & h4{
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        margin-right: 1rem;
+        gap:0.2rem;
+    }
   }
 
+  .size_card {
+    display: grid;
+    gap: 5px;
+    grid-template-columns: repeat(4, auto);
+    margin-bottom: 1rem;
+
+    & div {
+      width: 85px;
+      height: 40px;
+      border: solid #00000094;
+      border-width: 0.5px;
+      border-radius: 4px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+    & div:hover:not(:last-child) {
+      background: #e2e2e2;
+      transition: 0.2s all ease-in-out;
+    }
+  }
+}
+.size_card :last-child {
+  background: #bbbbbb;
+  color: #494949;
+  text-decoration: line-through;
+  text-decoration-color: #494949;
+}
+
+/* button div */
+
+.button_div {
+  width: 100%;
+ 
+  & button {
+    width: 100%;
+    height: 4rem;
+    padding: 0.4rem 2rem;
+    color: white;
+    font-weight: 800;
+    background: #333;
+    cursor: pointer;
+    border-radius: 2rem;
+    font-size: 1.1rem;
+    border: none;
+    outline: none;
+  }
+  & button:hover {
+    background: #131313;
+    transition: 0.2s all ease-in-out;
+  }
 }
