--- a/Add to Bag/style.css
+++ b/Add to Bag/style.css
@@ -9,7 +9,31 @@ html.body {
   width: 100%;
   height: 100%;
 }
-
+.toast {
+  position: absolute;
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 0.4rem 1rem;
+  align-items: center;
+  border-radius: 0.4rem;
+  background: #7700ff57;
+  top: 1rem;
+  right: 2rem;
+  border: 1px solid #7700ffbb;
+  transform: translateX(500px);
+  transition: 0.3s ease;
+  #toast_name {
+    color: #131313;
+    font-weight: 900;
+    font-size: 0.8rem;
+  }
+  #product_name {
+    color: rgb(15, 2, 41);
+    font-weight: 700;
+  }
+}
 main {
   width: 100vw;
   height: 100vh;
@@ -19,6 +43,7 @@ main {
   justify-content: center;
   border-radius: 5px;
   filter: drop-shadow(0px 0px 20px #00000091);
+  overflow: hidden;
 }
 
 .img_info_div {
@@ -125,12 +150,12 @@ main {
     align-items: center;
     justify-content: space-between;
 
-    & h4{
-        display:flex;
-        align-items:center;
-        justify-content:center;
-        margin-right: 1rem;
-        gap:0.2rem;
+    & h4 {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 1rem;
+      gap: 0.2rem;
     }
   }
 
@@ -151,10 +176,6 @@ main {
       justify-content: center;
       cursor: pointer;
     }
-    & div:hover:not(:last-child) {
-      background: #e2e2e2;
-      transition: 0.2s all ease-in-out;
-    }
   }
 }
 .size_card :last-child {
@@ -162,13 +183,16 @@ main {
   color: #494949;
   text-decoration: line-through;
   text-decoration-color: #494949;
+  pointer-events: none;
+  opacity: 0.6;
+  cursor: not-allowed;
 }
 
 /* button div */
 
 .button_div {
   width: 100%;
- 
+
   & button {
     width: 100%;
     height: 4rem;
@@ -186,4 +210,9 @@ main {
     background: #131313;
     transition: 0.2s all ease-in-out;
   }
+}
+
+.size_card div.activeCard {
+  background-color: #7700ffbb;
+  /* other styles */
 }
