--- a/Mobile Navigation/style.css
+++ b/Mobile Navigation/style.css
@@ -9,7 +9,10 @@ body{
     height:100%;
     /* background:#333; */
 }
-
+hr{
+    border:1px solid #383838a4;
+    border-radius: 0 1px 0 1px;
+}
 main{
     width:100vw;
     height:100vh;
@@ -21,19 +24,21 @@ main{
 .phone{
     width: 18rem;
     height:35rem;
-    background:red;
+    background:#ffffff;
     border-radius:0.9rem;
     overflow: hidden;
+    padding: 0 0.3rem;
+    filter:drop-shadow(0px 0px 30px #2727279a);
+   
 }
 
 .profile_div{
     width:100%;
     height:7rem;
-    background:green;
+    /* background:green; */
     display: flex;
     align-items: center;
     justify-content: center;
-
     & div{
         width:4rem;
         height: 4rem;
@@ -46,11 +51,36 @@ main{
             border-radius: 0.8rem;
         }
     }
+    .name_pos_div{
+        width:9rem;
+        text-wrap: nowrap;
+        /* background-color: red; */
+        padding:0rem 1rem;
+        p{
+            color:#000;
+            font-weight:800;
+            font-size:1.2rem;
+        }
+        h6{
+            color:#0f0f0f;
+            font-weight:500;
+        }
+    }
 }
 .profile_section_midbar{
     width:100%;
     height:15rem;
     background:#e2c103;
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
+    grid-template-rows:repeat(4, 3rem) ;
+
+    div{
+        width:100%;
+        height:30px;
+        background:red;
+    }
 }
 .profile_section_setting{
     width:100%;
