Mobile Navigation UI Complete

--- a/Mobile Navigation/style.css
+++ b/Mobile Navigation/style.css
@@ -1,94 +1,190 @@
-*{
-    margin:0;
-    padding:0;
-    font-family:Poppins,'sans-serif';
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Poppins, "sans-serif";
 }
 html,
-body{
-    width:100%;
-    height:100%;
-    /* background:#333; */
+body {
+  width: 100%;
+  height: 100%;
+  /* background:#333; */
 }
-hr{
-    border:1px solid #383838a4;
-    border-radius: 0 1px 0 1px;
+hr {
+  border: solid #3838382f;
+  border-width: 0.2px;
+  border-radius: 0 1px 0 1px;
 }
-main{
-    width:100vw;
-    height:100vh;
-    display:flex;
-    align-items: center;
-    justify-content: center;
+main {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.phone{
-    width: 18rem;
-    height:35rem;
-    background:#ffffff;
-    border-radius:0.9rem;
+.phone {
+  width: 18rem;
+  height: 39rem;
+  background: #ffffff;
+  border-radius: 1rem;
+  overflow: hidden;
+  padding: 0 0.9rem;
+  filter: drop-shadow(0px 0px 30px #2727279a);
+}
+
+.profile_div {
+  width: 100%;
+  height: 7rem;
+  /* background:green; */
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+  & div {
+    width: 4rem;
+    height: 4rem;
     overflow: hidden;
-    padding: 0 0.3rem;
-    filter:drop-shadow(0px 0px 30px #2727279a);
-   
-}
 
-.profile_div{
-    width:100%;
-    height:7rem;
-    /* background:green; */
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 0.8rem;
+    }
+  }
+  .name_pos_div {
+    width: 9rem;
+    text-wrap: nowrap;
+    /* background-color: red; */
+    p {
+      color: #000;
+      font-weight: 800;
+      font-size: 1.2rem;
+    }
+    h6 {
+      color: #0f0f0f;
+      font-weight: 500;
+    }
+  }
+}
+.profile_section_midbar {
+  width: 100%;
+  height: 15rem;
+  /* background:#e2c103; */
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(5, auto);
+  padding: 7px 0;
+  div {
+    width: 100%;
+    /* background:red; */
     display: flex;
     align-items: center;
-    justify-content: center;
-    & div{
-        width:4rem;
-        height: 4rem;
-        overflow: hidden;
+    justify-content: flex-start;
+    gap: 1rem;
+    padding: 0.2rem 0;
+    position: relative;
 
-        & img{
-            width:100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 0.8rem;
-        }
+    div {
+      width: 2rem;
+      height: 1.6rem;
+      background: #b891f77a;
+      border-radius: 0.5rem;
+      padding: 0.2rem 0;
+      object-fit: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 80%;
+        height: 80%;
+      }
     }
-    .name_pos_div{
-        width:9rem;
-        text-wrap: nowrap;
-        /* background-color: red; */
-        padding:0rem 1rem;
-        p{
-            color:#000;
-            font-weight:800;
-            font-size:1.2rem;
-        }
-        h6{
-            color:#0f0f0f;
-            font-weight:500;
-        }
+    p {
+      color: #000;
+      font-weight: 800;
+      font-size: 1.2rem;
     }
+    #cheveron {
+      position: absolute;
+      right: 0;
+    }
+  }
 }
-.profile_section_midbar{
-    width:100%;
-    height:15rem;
-    background:#e2c103;
-    display: grid;
-    grid-template-columns: auto;
+.profile_section_setting {
+  width: 100%;
+  height: 10rem;
+  /* background: #e203bd; */
+
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(5, auto);
+  padding: 7px 0;
+  div {
+    width: 100%;
+    /* background:red; */
+    display: flex;
     align-items: center;
-    grid-template-rows:repeat(4, 3rem) ;
+    justify-content: flex-start;
+    gap: 1rem;
+    padding: 0.2rem 0;
+    position: relative;
 
-    div{
-        width:100%;
-        height:30px;
-        background:red;
+    div {
+      width: 2rem;
+      height: 1.6rem;
+      background: #b891f77a;
+      border-radius: 0.5rem;
+      padding: 0.2rem 0;
+      object-fit: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 80%;
+        height: 80%;
+      }
     }
+    p {
+      color: #000;
+      font-weight: 800;
+      font-size: 1.2rem;
+    }
+    #cheveron {
+      position: absolute;
+      right: 0;
+    }
+  }
 }
-.profile_section_setting{
-    width:100%;
-    height:10rem;
-    background:#e203bd;
-}
-.profile_section_bottom{
-    width:100%;
-    height:3rem;
-    background:#0364e2;
+.profile_section_bottom {
+  width: 100%;
+  height: 3rem;
+  /* background: #0364e2; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding:7px 0 0 0;
+
+  & div {
+    width: 3rem;
+    height: 3rem;
+    display: grid;
+    place-content: center;
+    border-radius: 50%;
+    cursor:pointer;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      opacity:2;
+    }
+  }
+  
+  & div:hover {
+    background: #b891f77a;
+    transition: 0.2s ease;
+  }
+
 }
