--- a/Mobile Navigation/style.css
+++ b/Mobile Navigation/style.css
@@ -84,7 +84,7 @@ main {
     gap: 1rem;
     padding: 0.2rem 0.4rem;
     position: relative;
-    cursor:pointer;
+    cursor: pointer;
 
     div {
       width: 2rem;
@@ -110,9 +110,13 @@ main {
       position: absolute;
       right: 0;
     }
-  }
-  & div:hover{
-    background:#997ff870;
+    div:hover {
+        background: #7731e77a;
+      }
+      div:hover img {
+        transform:scale(1.1);
+        transition:0.2s ease;
+      }
   }
 }
 .profile_section_setting {
@@ -134,7 +138,7 @@ main {
     gap: 1rem;
     padding: 0.2rem 0.4rem;
     position: relative;
-    cursor:pointer;
+    cursor: pointer;
 
     div {
       width: 2rem;
@@ -160,9 +164,13 @@ main {
       position: absolute;
       right: 0;
     }
-  }
-  div:hover{
-    background:#997ff870;
+    div:hover {
+      background: #7731e77a;
+    }
+    div:hover img {
+      transform:scale(1.1);
+      transition:0.2s ease;
+    }
   }
 }
 .profile_section_bottom {
@@ -172,7 +180,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding:7px 0 0 0;
+  padding: 7px 0 0 0;
 
   & div {
     width: 3rem;
@@ -180,18 +188,21 @@ main {
     display: grid;
     place-content: center;
     border-radius: 50%;
-    cursor:pointer;
+    cursor: pointer;
 
     & img {
       width: 100%;
       height: 100%;
-      opacity:2;
+      opacity: 2;
     }
   }
-  
+
   & div:hover {
     background: #b891f77a;
     transition: 0.2s ease;
   }
-
+  div:hover img {
+    transform:scale(1.1);
+    transition:0.2s ease;
+  }
 }
