--- a/Contact Us/style.css
+++ b/Contact Us/style.css
@@ -1,29 +1,50 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: Poppins, "sans-serif";
-  }
-  html,
-  body {
-    width: 100%;
-    height: 100%;
-  }
-  main {
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns:repeat(2, auto);
-    grid-template-rows:auto;
-    background:#333;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: Poppins, "sans-serif";
+  box-sizing:border-box;
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+main {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: auto;
+  background: #333;
+}
 
-  .left_div{
-    background:#e41010;
-    padding:5rem 3rem;
-    
-  }
-  .right_div{
-    background:#afd40a;
-    padding:5rem 3rem;
+.left_div {
+  background: #e41010;
+  padding: 5rem 3rem;
+}
+.right_div {
+  background: #afd40a;
+  padding: 5rem 3rem;
+  display:grid;
+  place-items: center;
+}
 
-  }
+ form{
+    height:100%;
+    width:20rem;
+    background-color: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap:1rem;
+    border-radius: 1rem;
+    padding:0.4rem 1rem;
+
+    input[type="text"],
+    input[type="email"],
+    input[type="phone"]{
+      width:100%;
+      padding:0.4rem 1rem;
+    }
+}
