--- a/Recipe/style.css
+++ b/Recipe/style.css
@@ -90,11 +90,37 @@ main {
     height: 70%;
     background-color: rgb(255, 111, 0);
 
+    & .svg_div {
+      width: 100%;
+      height: 3rem;
+      background: red;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 1rem;
+      div {
+        background: yellow;
+        display: flex;
+        align-items: center;
 
-    & .svg_div{
-        width:10rem;
-        height:3rem;
-        background:red;
+        & div {
+          /* background: blue; */
+       
+          display: flex;
+          align-items: flex-start;
+          flex-direction: column;
+          justify-content: flex-start;
+          font-weight: 800;
+          h5{
+            color: rgb(255, 157, 0);
+          }
+        }
+      }
+
+      & div img {
+        width: 2.5rem;
+        height: 2.5rem;
+      }
     }
   }
 }
