--- a/Recipe/style.css
+++ b/Recipe/style.css
@@ -88,7 +88,7 @@ main {
   & .container_div {
     width: 100%;
     height: 70%;
-    background-color: rgb(255, 111, 0);
+    background-color: #ff6f00;
 
     & .svg_div {
       width: 100%;
@@ -97,15 +97,13 @@ main {
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      gap: 1rem;
-      div {
+      gap: 2rem;
+       div {
         background: yellow;
         display: flex;
         align-items: center;
-
         & div {
           /* background: blue; */
-       
           display: flex;
           align-items: flex-start;
           flex-direction: column;
@@ -118,9 +116,30 @@ main {
       }
 
       & div img {
-        width: 2.5rem;
-        height: 2.5rem;
+        width: 1.5rem;
+        height: 1.5rem;
+        margin-right: 0.5rem;
       }
+    }
+
+    /* details */
+    & .container_two h5{
+        font-style: italic;
+    }
+
+    /* ingredients_div */
+    & .ingredients_div{
+        width:100%;
+        height:auto;
+        background:blue;
+        display:flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+
+        div{
+            accent-color: #ff6f00;
+        }
     }
   }
 }
