--- a/Recipe/style.css
+++ b/Recipe/style.css
@@ -25,7 +25,7 @@ main {
   position: absolute;
   z-index: 10;
   left: 25%;
-  top: 10%;
+  top: 5%;
   padding: 0.6rem 1rem;
   font-weight: 900;
   line-height: 2rem;
@@ -87,19 +87,20 @@ main {
 
   & .container_div {
     width: 100%;
-    height: 70%;
+    height: 75%;
     background-color: #ff6f00;
 
     & .svg_div {
       width: 100%;
       height: 3rem;
-      background: red;
+      /* background: red; */
       display: flex;
       align-items: center;
       justify-content: flex-start;
       gap: 2rem;
-       div {
-        background: yellow;
+      /* margin-top: 2rem; */
+      div {
+        /* background: yellow; */
         display: flex;
         align-items: center;
         & div {
@@ -109,7 +110,7 @@ main {
           flex-direction: column;
           justify-content: flex-start;
           font-weight: 800;
-          h5{
+          h5 {
             color: rgb(255, 157, 0);
           }
         }
@@ -123,23 +124,55 @@ main {
     }
 
     /* details */
-    & .container_two h5{
-        font-style: italic;
+    & .container_two h5 {
+      font-style: italic;
     }
 
     /* ingredients_div */
-    & .ingredients_div{
-        width:100%;
-        height:auto;
-        background:blue;
-        display:flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
+    & .ingredients_div {
+      width: 100%;
+      height: auto;
+      background:blue;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      margin-top: 0.5rem;
+      h3 {
+        margin-bottom: 0.4rem;
+      }
 
-        div{
-            accent-color: #ff6f00;
+      div {
+        & input {
+          appearance: none;
+          margin-right: 0.5rem;
+          width: 1rem;
+          height: 1rem;
+          border: 1px solid black;
+          cursor: pointer;
+          padding: 0.5rem 0.5rem;
         }
+        & input:checked {
+          background-color: #ff6f00;
+          border-color: #c05300;
+          position: relative;
+        }
+        & input:checked::after {
+          content: "✔";
+          color: #ffffff;
+          font-size: 0.8rem;
+          position: absolute;
+          top: -1px;
+          left: 2px;
+        }
+      }
     }
   }
+
+  .instruction_div{
+    div{
+        padding: 0 0 0 1rem;
+    }
+  }
+
 }
