Recipe App Completed

--- a/Recipe/style.css
+++ b/Recipe/style.css
@@ -79,7 +79,7 @@ main {
   }
 }
 .right_div {
-  background-color: yellow;
+  /* background-color: yellow; */
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -88,7 +88,7 @@ main {
   & .container_div {
     width: 100%;
     height: 75%;
-    background-color: #ff6f00;
+    /* background-color: #ff6f00; */
 
     & .svg_div {
       width: 100%;
@@ -132,17 +132,18 @@ main {
     & .ingredients_div {
       width: 100%;
       height: auto;
-      background:blue;
+      /* background:blue; */
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       justify-content: center;
-      margin-top: 0.5rem;
+      margin: 1rem 0;
       h3 {
         margin-bottom: 0.4rem;
       }
 
       div {
+        & label {cursor: pointer;}
         & input {
           appearance: none;
           margin-right: 0.5rem;
