--- a/Image Carousel/style.css
+++ b/Image Carousel/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Poppins,sans-serif;
 }
 html,
 body {
@@ -12,7 +13,7 @@ body {
 main {
   display: grid;
   grid-template-rows: 1fr 0.5fr;
-  background: red;
+  background: #2a2a2a;
   width: 100%;
   height: 100%;
   align-items: center;
@@ -23,7 +24,7 @@ main {
   align-items: center;
   justify-content: center;
   gap:1rem;
-  background: green;
+  /* background: green; */
   width:100%;
   height:100%;
   .showing_image {
@@ -36,6 +37,25 @@ main {
       object-position: center;
     }
   }
+
+   /* Button Style */
+   #leftBtn,
+   #rightBtn{
+     width:100px;
+     padding:0.4rem 0.8rem;
+     border:none;
+     outline:none;
+     cursor:pointer;
+     background:#101010;
+     color:white;
+     font-size:1.3rem;
+     font-weight:600;
+     border-radius: 0.5rem;
+   }
+   #leftBtn:hover,
+   #rightBtn:hover{
+    background:#303030;
+   }
 }
 
 
@@ -44,10 +64,15 @@ main {
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    gap: 1rem;
+    padding: 1rem;
+    scroll-behavior: smooth;
     .showing_image {
-        width:150px;
-        height:150px;
+        flex: 0 0 auto;
+        width: 150px;
+        height: 150px;
         & img {
           width: 100%;
           height: 100%;
@@ -55,4 +80,8 @@ main {
           object-position: center;
         }
       }
+      &::-webkit-scrollbar {
+        display: none;
+    }
+     
 }
