--- a/Create Account Page/style.css
+++ b/Create Account Page/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   font-family: Poppins, "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
     sans-serif;
-    text-wrap:nowrap;
+  text-wrap: nowrap;
 }
 
 html,
@@ -15,7 +15,11 @@ body {
 }
 
 .main-container {
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+  background: url("image.png");
+  object-fit: contain;
+  object-position: right;
+  background-repeat: no-repeat;
   width: 100%;
   height: 100%;
   display: flex;
@@ -26,7 +30,6 @@ body {
 
 /* form */
 form {
-  width: 40%;
   height: 100%;
   /* background: yellow; */
   display: grid;
@@ -41,10 +44,11 @@ form {
   height: 100%;
   margin-bottom: 1rem;
   & h5 {
-    color: #646464;
+    color: #dedede;
   }
   & h1 {
     font-weight: bolder;
+    color: #ffffff;
   }
 }
 .sec_1 {
@@ -175,7 +179,7 @@ form {
   width: 100%;
   height: 100%;
   & p {
-    color: #646464;
+    color: #eaeaea;
     font-size: 1.2rem;
     font-weight: 800;
   }
@@ -212,5 +216,10 @@ form {
   }
   & button:hover {
     filter: brightness(1.5);
+  }
+  h5 {
+    text-align: center;
+    color: #ff5858;
+    visibility: hidden;
   }
 }
