--- a/Create Account Page/style.css
+++ b/Create Account Page/style.css
@@ -16,7 +16,7 @@ body {
 
 .main-container {
   /* background-color: #f5f5f5; */
-  background: url("image.png");
+  background: url("./STATIC/image.png");
   object-fit: contain;
   object-position: right;
   background-repeat: no-repeat;
@@ -73,7 +73,7 @@ form {
       font-weight: 800;
 
       & #name {
-        width: 98%;
+        width: 85%;
         height: 40%;
         border: none;
         outline: none;
@@ -82,6 +82,14 @@ form {
         background: transparent;
         display: block;
         display: block;
+      }
+      & img{
+        position:absolute;
+        right:3px;
+        top:22px;
+        width: 30px;
+        height:30px;
+        background:#dee5f6;
       }
     }
   }
@@ -100,7 +108,7 @@ form {
       font-weight: 800;
 
       & #surname {
-        width: 98%;
+        width: 85%;
         height: 40%;
         border: none;
         outline: none;
@@ -108,6 +116,14 @@ form {
         font-weight: 800;
         background: transparent;
         display: block;
+      }
+      & img{
+        position:absolute;
+        right:3px;
+        top:22px;
+        width: 30px;
+        height:30px;
+        background:#dee5f6;
       }
     }
   }
@@ -131,7 +147,7 @@ form {
       font-weight: 800;
 
       & #email {
-        width: 98%;
+        width: 89%;
         height: 40%;
         border: none;
         outline: none;
@@ -139,6 +155,14 @@ form {
         font-weight: 800;
         background: transparent;
         display: block;
+      }
+      & img{
+        position:absolute;
+        right:5px;
+        top:25px;
+        width: 25px;
+        height:25px;
+        background:#dee5f6;
       }
     }
   }
