--- a/Music Events/style.css
+++ b/Music Events/style.css
@@ -27,6 +27,14 @@ body {
   }
 }
 
+.detail_div{
+    width:80%;
+
+    & h4{
+        color:#4d4c4c;
+    }
+}
+
 #container {
   width: 100%;
   height: 500px;
@@ -47,7 +55,6 @@ body {
 
     .div_day_time {
       width: 120px;
-      background: #f1ad2c;
       height: 100%;
       border-radius: 1rem;
       display: flex;
