--- a/Password Generator/style.css
+++ b/Password Generator/style.css
@@ -28,17 +28,21 @@ body {
   background: #06000f;
   border-radius: 1rem;
   padding: 0.5rem 1rem;
-  color:white;
+  color: white;
+
+  h2{
+    margin-bottom: 1rem;
+  }
 }
 
 .password_content {
   width: 100%;
   height: 90%;
   /* background: green; */
-  display: grid;
-  grid-template-rows: calc(90% / 6);
-  grid-template-columns: auto;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   .generated_pass_div {
     width: 100%;
     /* background-color: yellow; */
@@ -47,38 +51,38 @@ body {
     justify-content: flex-start;
 
     label {
-        display: block;
-        font-size: 0.8rem;
+      display: block;
+      font-size: 0.8rem;
+      width: 100%;
+      color: #4e4e4e;
+      font-weight: 700;
+
+      div {
         width: 100%;
-        color:#4e4e4e;
-        font-weight: 700;
-  
-        div {
+        background-color: #22133b;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0.5rem 0.3rem;
+        border-radius: 1.2rem;
+        overflow: hidden;
+        input {
+          font-size: 1.2rem;
+          color: #e7e7e7;
           width: 100%;
+          padding: 0.2rem 1.5rem 0.2rem 0.2rem;
+          border: none;
+          outline: none;
           background-color: #22133b;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          padding: 0.5rem 0.3rem;
-          border-radius: 1.2rem;
-          overflow: hidden;
-          input {
-            font-size:1.2rem;
-            color:#e7e7e7;
-            width: 100%;
-            padding: 0.2rem 1.5rem 0.2rem 0.2rem;
-            border:none;
-            outline:none;
-            background-color: #333;
-          }
         }
       }
+    }
   }
 
   /* Slider PAssword strength */
   .range_of_pass_div {
     width: 100%;
-    background-color: yellow;
+    /* background-color: yellow; */
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -92,17 +96,65 @@ body {
         width: 100%;
         height: 100%;
         background-color: #22133b;
-        padding:0 0 0 1rem;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
+        padding: 1.1rem 0.5rem;
+        border-radius: 1.2rem;
         input {
           width: 100%;
           accent-color: #be65fa;
-          
         }
-        
       }
     }
+  }
+
+  /* Settings Area */
+  /* setting_div */
+  .setting_div {
+    width: 100%;
+    /* background-color: yellow; */
+
+    label {
+      font-size: 0.8rem;
+      width: 100%;
+      color: #4e4e4e;
+      font-weight: 700;
+      gap: 1rem;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+
+      div {
+        width: 100%;
+        background-color: #22133b;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 1.1rem 0.5rem;
+        border-radius: 1.2rem;
+        overflow: hidden;
+        font-size: 1.2rem;
+        color: #e7e7e7;
+      }
+    }
+  }
+
+  /* button */
+  button {
+    width: 100%;
+    background-color: #be65fa;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.7rem 0.5rem;
+    font-size: 1.2rem;
+    color: #e7e7e7;
+    border-radius: 1.2rem;
+    cursor:pointer;
+  }
+  button:hover{
+    filter:brightness(1.2);
   }
 }
